--- a/box-init/files/etc/httpd/conf/httpd.conf
+++ b/box-init/files/etc/httpd/conf/httpd.conf
@@ -149,7 +149,7 @@ DocumentRoot "/sandbox/www"
     # It can be "All", "None", or any combination of the keywords:
     #   Options FileInfo AuthConfig Limit
     #
-    AllowOverride None
+    AllowOverride All
 
     #
     # Controls who can get stuff from this server.
