--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
         "psr-4": {
             "src\\":"src/"
           }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8"
     }
 }
